feat: Add Confluence and SharePoint KB integration for RAG bot

--- a/RecipeSearchWeb/appsettings.json
+++ b/RecipeSearchWeb/appsettings.json
@@ -9,7 +9,22 @@
   "AzureStorage": {
     "ConnectionString": "SET_IN_AZURE_APP_SERVICE_CONFIGURATION",
     "ContainerName": "scripts",
-    "KnowledgeContainerName": "knowledge"
+    "KnowledgeContainerName": "knowledge",
+    "SharePointCacheContainer": "sharepoint-cache",
+    "ConfluenceCacheContainer": "confluence-cache"
+  },
+  "SharePoint": {
+    "SiteId": "SET_IN_AZURE_APP_SERVICE_CONFIGURATION",
+    "LibraryName": "KBU",
+    "TenantId": "SET_IN_AZURE_APP_SERVICE_CONFIGURATION",
+    "ClientId": "SET_IN_AZURE_APP_SERVICE_CONFIGURATION",
+    "ClientSecret": "SET_IN_AZURE_APP_SERVICE_CONFIGURATION"
+  },
+  "Confluence": {
+    "BaseUrl": "SET_IN_AZURE_APP_SERVICE_CONFIGURATION",
+    "Email": "SET_IN_AZURE_APP_SERVICE_CONFIGURATION",
+    "ApiToken": "SET_IN_AZURE_APP_SERVICE_CONFIGURATION",
+    "SpaceKeys": "SET_IN_AZURE_APP_SERVICE_CONFIGURATION"
   },
   "Authorization": {
     "AdminEmails": [
