docs: Add troubleshooting guide and update gitignore
- Add TROUBLESHOOTING.md with solutions for common deployment issues
- Document WebSockets fix for Blazor Server chatbot
- Document @rendermode layout incompatibility (causes 500 error)
- Document Jira date parsing fix
- Document DI registration fix for IJiraClient
- Update .gitignore to exclude Azure logs and temp files

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@ obj/
 
 # Azure logs (downloaded from App Service)
 logs/
-logs2/
+logs*/
+logs-latest/
+webapp-logs/
+webapp-logs*/
 
 # Test projects with sensitive data
 TestConfluence/
